
                    ParticleGun History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.
     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
	 
20-10-14 mma (particleGunExample-V10-00-04) 
- particleGun.cc: nThreads via commands

26-09-14 mma (particleGunExample-V10-00-03) 
- migration to MT: add class ActionInitialization
	 
22-09-14 mma (particleGunExample-V10-00-02) 
- add PrimaryGeneratorAction0 class and run0.mac

21-09-14 mma (particleGunExample-V10-00-01) 
- simplify histograms

01-09-14 mma (particleGunExample-V10-00-00) 
- modify plots of angles
   
11-07-13 I.Hrivnacova (particleGunExample-V09-06-06) 
- In HistoManager: use new analysis manager method SetH1Activation()   
     
07-06-13 mma (particleGunExample-V09-06-05)
- Cosmetic in SteppingAction.     
     
28-03-13 mma (particleGunExample-V09-06-04)
- simplify histos management
     
24-03-13 mma (particleGunExample-V09-06-03)
- polish coding conventions
     
17-03-13 mma (particleGunExample-V09-06-02)
- G4 coding conventions

14-02-13  I.Hrivnacova (particleGunExample-V09-06-01)
- Do not declare virtual functions in PrimaryGeneratorActionN
  classes which do not derive from Geant4 base class.

13-02-13  I.Hrivnacova (particleGunExample-V09-06-00)
- Applied coding guidelines (virtual keyword, data member initialization)

17-11-12 I. Hrivnacova (particleGunExample-V09-05-05)
- Updated documentation:
  - Fixed .README files for artefacts from Markdown support
  - Removed obsolete instructions (how to compile & link)

13-11-12 I. Hrivnacova (particleGunExample-V09-05-04)
- Fixed order of instatiating G4VisExecutive and G4UIExecutive
  (required when Qt driver is activated).
     
26-03-12 mma (particleGunExample-V09-05-03)
- all classes : apply G4 coding conventions
     