@@ -4,4 +4,5 @@
 #
 /gunExample/selectGunAction 3
 #
+/run/initialize
 /run/beamOn 10000
