@@ -3,6 +3,8 @@
 /control/verbose 2
 /run/verbose 1
 #
+/run/initialize
+#
 /gunExample/selectGunAction 1
 #
 /tracking/verbose 1
