@@ -1,6 +1,8 @@
 /control/verbose 2
 /run/verbose 1
 #
+/run/initialize
+#
 /gunExample/selectGunAction 2
 #
 /analysis/setFileName run2
